labs/02-clients.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-allowed
  namespace: k8s-book-lab
  labels:
    role: client
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: client
    image: docker.io/nginxinc/nginx-unprivileged:stable-alpine
    command:
    - sh
    - -c
    - sleep 86400
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
    resources:
      requests:
        cpu: 10m
        memory: 16Mi
      limits:
        cpu: 100m
        memory: 64Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: client-other
  namespace: k8s-book-lab
  labels:
    role: other
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: client
    image: docker.io/nginxinc/nginx-unprivileged:stable-alpine
    command:
    - sh
    - -c
    - sleep 86400
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
    resources:
      requests:
        cpu: 10m
        memory: 16Mi
      limits:
        cpu: 100m
        memory: 64Mi
