labs/06-pvc-writer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-writer
  namespace: k8s-book-lab
  labels:
    role: storage
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
    fsGroup: 101
  containers:
  - name: writer
    image: docker.io/nginxinc/nginx-unprivileged:stable-alpine
    command:
    - sh
    - -c
    - sleep 86400
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
    resources:
      requests:
        cpu: 10m
        memory: 16Mi
      limits:
        cpu: 100m
        memory: 64Mi
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: lab-data
